# Hypostasia

./: .bashrc  .dockerignore  .env.example  .gitignore  API_DOC.md  CHANGELOG.md  Dockerfile  Dockerfile.dev  GUIDELINES.md  LINKING_MECHANISM.md  PLAN.md  README.md  VERSION  bashrc  compose-kimi.yml  create_superuser.py  docker-compose-dev.yml  docker-compose.yml  extension.crx  extension.pem  init_prompts.py  inspect_db.py  install.sh  manage.py  package.json  populate_mock_data.py  pyproject.toml  reset_prompt_script.py  seed_prompts.py  start.sh  supervisord.conf  test_analysis.py  update_prompt_format.py  verify_pipeline.py
PLAN/: A.1-retrait-explorer.md  A.2-retrait-heatmap.md  A.3-retrait-mode-focus.md  A.4-retrait-stripe.md  A.5-retrait-bibliotheque-analyseurs.md  A.6-refonte-websocket-plan.md  A.6-refonte-websocket-spec.md  A.7-retrait-reformulation-restitution.md  A.8-statuts-binaires-fusion-templates-plan.md  A.8-statuts-binaires-fusion-templates-spec.md  INSPIRATION_ATOMIC.md  LANGEXTRACT_OVERRIDES.md  PLAN.md  README.md  REVUE_YAGNI_2026-05-01.md
core/: admin.py  llm_providers.py  models.py  serializers.py  services.py  urls.py  views.py
doc/: 01-prise-en-main.md  02-import.md  03-dossiers.md  04-edition-transcription.md  05-titre-source-export.md  README.md
extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  sidebar.html  sidebar.js
front/: consumers.py  context_processors.py  normalisation.py  routing.py  serializers.py  services_stripe.py  tasks.py  urls.py  utils.py  views.py  views_ws.py  (+9 more)
(+349 files in other folders)
