[project]
name = "v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6",
    "django-cors-headers>=4.9.0",
    "django-htmx>=1.27.0",
    "djangorestframework>=3.16.1",
    "google-generativeai>=0.8.5",
    "ipdb>=0.13.13",
    "openai>=2.9.0",
    "gunicorn>=21.2.0",
    "djangorestframework-stubs>=3.16.6",
    "langextract>=0.1.0",
    "bleach>=6.3.0",
    "django-solo>=2.5.1",
    "markitdown[all]>=0.1.0",
    "mammoth>=1.8.0",
    "mistune>=3.1.0",
    "celery>=5.4",
    "django-celery-results>=2.5",
    "mistralai>=1.0",
    "sqlalchemy>=2.0",
    "supervisor>=4.2",
    "tiktoken>=0.12.0",
]
